--- a/index.html
+++ b/index.html
@@ -14,13 +14,28 @@
   />
   <script src="https://cdn.tailwindcss.com"></script>
   <body>
-    <header>
-      
+    <header class="bg-[#F9F6E2] ">
+      <div class="banner-content flex gap-5 flex-col md:flex-row w-[100%] mx-auto flex justify-center items-center py-10">
+        <div class="text-center">
+          <h4 class="text-2xl text-[#111] font-semibold">---SALE FEVER---</h4>
+          <h1 class="text-4xl text-[#000] font-bold tracking-wider	my-7 max-w-[450px]">Purchase TK 200 or above & get <span class="text-[#E527B2]">20% off</span></h1>
+          <p class="text-sm font-semibold text-[#111]">Use Promo Code <button class="bg-[#E527B2] text-white px-5 py-2 rounded-md mx-4">SELL200</button> </p>
+        </div>
+        <div class=""><img src="./images/Summer 1.png" alt="" class="max-w-[400px]"></div>
+      </div>
     </header>
 
 
+    <main class="flex bg-[#f6f6f6] w-[90%] mx-auto px-10 py-5 flex-col md:flex-row">
+      <div class="content-area flex-1 h-[500px] bg-slate-800">
+        <h1 class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ullam provident officia illum commodi non quibusdam omnis at, unde neque.</h1>
+      </div>
+      <div class="sidebar w-[100%] md:w-[25%] h-[500px] bg-slate-500">
+        <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimu</h1>
+      </div>
+    </main>
 
-    <script src="./js/carts.js"></script>
+
 
   </body>
 </html>
