Make Different JS file and move the code there

--- a/index.html
+++ b/index.html
@@ -602,6 +602,11 @@
       </div>
     </main>
 
-    <script src="./js/function.js"></script>
+    <!-- <script src="./js/function.js"></script> -->
+    <script src="./js/init.js"></script>
+    <script src="./js/addToCart.js"></script>
+    <script src="./js/calculateDiscount.js"></script>
+    <script src="./js/finalTotal.js"></script>
+    <script src="./js/closeButton.js"></script>
   </body>
 </html>
